Correccion de sintaxis

--- a/src/app/components/categories/categories-form/categories-form.component.html
+++ b/src/app/components/categories/categories-form/categories-form.component.html
@@ -9,7 +9,7 @@
           class="form-control"
           id="name"
           name="name"
-          placeholder="Product Name"
+          placeholder="Category Name"
           [(ngModel)]="category.name"
           [ngClass]="{
             'is-invalid': name.invalid && name.touched,
@@ -25,7 +25,7 @@
           class="form-control"
           id="description"
           name="description"
-          placeholder="Product description"
+          placeholder="Category description"
           [(ngModel)]="category.description"
           [ngClass]="{
             'is-invalid': description.invalid && description.touched,
